Fixing spacing

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,4 @@
-/****************************
-Global styles
-*****************************/
+/**************************** Global styles *****************************/
 *, *::before, *::after {
     box-sizing: border-box;
     margin: 0;
@@ -70,17 +68,15 @@ a:hover {
     color: var(--dark-color);
 }
 
-/****************************
-Container
-*****************************/
+/**************************** Container *****************************/
 .container {
     width: 95%;
     margin: 0 auto;
 }
 
-/****************************
-Card styles
-*****************************/
+/**************************** Index page *****************************/
+
+/**************************** Card styles *****************************/
 
 .featured-slideshow {
     width: 100%;
@@ -299,6 +295,8 @@ section.recipes {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
+/**************************** Detailed page *****************************/
+
 .ingredients h2, .instructions h2 {
     text-align: left;
     margin: 1rem 0;
@@ -441,6 +439,8 @@ figure {
     text-align: left;
 }
 
+
+/**************************** Links page *****************************/
 .bibliography {
   list-style-type: decimal;
   padding-left: 2rem;
@@ -461,6 +461,8 @@ figure {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    margin-top: 2rem; /* adjust as needed */
+    text-align: center;
 }
 
 
